force-app/main/default/objects/TE_Material__c/TE_Material__c.object-meta.xml
<CustomObject>
    <label>TE Material</label>
    <nameField>
        <label>TE Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TE Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>