force-app/main/default/objects/TE_Material__c/fields/Measurement_Unit__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Unit__c</fullName>
    <label>Measurement Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cm</fullName>
            </value>
            <value>
                <fullName>ft</fullName>
            </value>
            <value>
                <fullName>gm</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>kg</fullName>
            </value>
            <value>
                <fullName>lb</fullName>
            </value>
            <value>
                <fullName>ltr</fullName>
            </value>
            <value>
                <fullName>ml</fullName>
            </value>
            <value>
                <fullName>mtr</fullName>
            </value>
            <value>
                <fullName>qt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>